[package]
name = "brw"
version = "0.1.0"
edition = "2018"
description = "A simple builder for the broker-reader-writer pattern"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/brw"
readme = "Readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

default = []

builder = []

[dev-dependencies]
tokio = { version = "1.7.1", features = ["rt-multi-thread", "macros"] }

[dependencies]
async-trait = "0.1"
flume = "0.10"
futures = "0.3"
log = "0.4"
async-std = { version = "1", optional = true }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
