[package]
name = "brw"
version = "0.1.4"
edition = "2018"
description = "A simple builder for the broker-reader-writer pattern"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/brw"
readme = "Readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]

[features]

default = []

docs = []
builder = []
debug = ["log"]

[dev-dependencies]
tokio = { version = "1.7.1", features = ["rt-multi-thread", "macros"] }

[dependencies]
async-trait = "0.1"
flume = "0.10"
futures = "0.3"
log = { version = "0.4", optional = true }
async-std = { version = "1", optional = true }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
